# patch-package-py

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
patch_package_py/: __init__.py  cli.py  core.py
skills/patch-package-py/: SKILL.md
tests/: test_core.py  test_e2e.py
