[project]
name = "patch-package-py"
version = "0.1.3"
description = "patch 3rd party Python packages"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
authors = [{ name = "nomyfan", email = "nomyfan@live.com" }]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/nomyfan/patch-package-py"
Repository = "https://github.com/nomyfan/patch-package-py"
Issues = "https://github.com/nomyfan/patch-package-py/issues"

[project.scripts]
p12y = "patch_package_py.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pyright>=1.1.405", "ruff>=0.12.12", "pytest>=8.0", "pytest-cov>=7.0.0"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.9"
include = ["patch_package_py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
